--- a/styles/login.css
+++ b/styles/login.css
@@ -1,10 +1,12 @@
 /* Asegura que todos los textos utilicen la fuente Ubuntu */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
     font-family: 'Ubuntu', sans-serif;
 }
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -33,13 +35,15 @@ body, html {
     flex-direction: column;
     align-items: center;
     width: 80%;
-    max-width: 400px; /* Ajustado el ancho máximo */
+    max-width: 400px;
+    /* Ajustado el ancho máximo */
 }
 
 .login-form input[type="text"],
 .login-form input[type="password"],
 .login-form button {
-    width: 500px; /* Ancho completo */
+    width: 500px;
+    /* Ancho completo */
     padding: 20px;
     margin-bottom: 15px;
     border-radius: 25px;
@@ -109,9 +113,10 @@ body, html {
     .login-form .forgot-password,
     .footer .register {
         font-size: 20px;
-        margin-bottom: 50%; /* Add margin to avoid space at the bottom */
+        margin-bottom: 50%;
+        /* Add margin to avoid space at the bottom */
     }
-    
+
     .footer {
         padding: 60px;
         font: 20px;
