--- a/styles/index.css
+++ b/styles/index.css
@@ -122,7 +122,7 @@
     font-size: small;
 }
 
-.quisqueros_chats {
+.kiosqueros_chats {
     text-align: center;
     font-size: 1.5rem;
     background-color: aliceblue;
