--- a/styles/index.css
+++ b/styles/index.css
@@ -107,8 +107,9 @@
 }
 
 .chat_container_mensagge {
-    color: rgb(179, 179, 179);
+    color: rgb(34, 34, 34);
     font-size: small;
+    height: 14.94px;
 }
 
 .chat_container div {
@@ -127,4 +128,9 @@
     font-size: 1.5rem;
     background-color: aliceblue;
     padding: .5rem;
+}
+
+a {
+    text-decoration: none;
+    color: initial;
 }
