--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,11 @@ body {
     background-size: cover;
 }
 
+body > main {
+    height: calc(100% - 54px);
+    position: relative;
+} 
+
 .navbar {
     display: flex;
     justify-content: space-around;
@@ -70,4 +75,9 @@ body {
         /* Tamaño de texto más pequeño */
     }
 
+}
+
+a {
+    text-decoration: none;
+    color: initial;
 }
