--- a/styles/index.css
+++ b/styles/index.css
@@ -19,8 +19,10 @@
 }
 
 .logo{
-    height: 100px;
-    
+    position: absolute;
+    height: 35px;
+    left: 4px;
+    top: 4px;
 }
 
 .content {
@@ -137,6 +139,7 @@
 }
 
 .kiosqueros_chats {
+    position: relative;
     text-align: center;
     font-size: 1.5rem;
     background-color: aliceblue;
