--- a/styles/configuracion.css
+++ b/styles/configuracion.css
@@ -86,6 +86,7 @@ a:hover {
 }
 
 .arriba {
+    position: relative;
     text-align: center;
     font-size: 1.5rem;
     background-color: aliceblue;
@@ -93,14 +94,13 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    width: 100%;
-    z-index: 5;
 }
 
 .logo{
-    height: 100px;
-    
+    position: absolute;
+    height: 35px;
+    left: 4px;
+    top: 4px;
 }
 
 /* Media queries para responsividad */
