--- a/assets/styles/ayuda.css
+++ b/assets/styles/ayuda.css
@@ -14,7 +14,21 @@ body {
 }
 
 .logo {
-    width: 150px;
+    position: absolute;
+    height: 35px;
+    left: 4px;
+    top: 4px;
+}
+
+.arriba {
+    position: relative;
+    text-align: center;
+    font-size: 1.5rem;
+    background-color: aliceblue;
+    padding: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .help-container {
@@ -26,12 +40,15 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
+h1,
+h2 {
     text-align: center;
     color: royalblue;
 }
 
-.faq-item, .contact-form, .resources {
+.faq-item,
+.contact-form,
+.resources {
     margin-bottom: 20px;
 }
 
@@ -45,7 +62,8 @@ h1, h2 {
     color: #333;
 }
 
-.contact-form input, .contact-form textarea {
+.contact-form input,
+.contact-form textarea {
     width: 97%;
     padding: 10px;
     margin-top: 5px;
