--- a/assets/styles/configuracion.css
+++ b/assets/styles/configuracion.css
@@ -4,7 +4,8 @@ html {
     height: 100%;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    background-color: #f0f0f0; /* Color de fondo general */
+    background-color: #f0f0f0;
+    /* Color de fondo general */
 }
 
 .main {
@@ -28,7 +29,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:calc(100vh - 400px) ;
+    height: calc(100vh - 400px);
     padding: 20px;
     padding-top: 141px;
 }
@@ -86,6 +87,7 @@ a:hover {
 }
 
 .arriba {
+    position: relative;
     text-align: center;
     font-size: 1.5rem;
     background-color: aliceblue;
@@ -93,14 +95,13 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    width: 100%;
-    z-index: 5;
 }
 
-.logo{
-    height: 100px;
-    
+.logo {
+    position: absolute;
+    height: 35px;
+    left: 4px;
+    top: 4px;
 }
 
 /* Media queries para responsividad */
@@ -119,4 +120,9 @@ a:hover {
     .acciones h2 {
         font-size: 20px;
     }
+}
+
+a {
+    overflow: auto;
+    max-height: calc(100v h - 100px);
 }
