--- a/assets/styles/ayuda.css
+++ b/assets/styles/ayuda.css
@@ -13,7 +13,7 @@ body {
     border-bottom: 1px solid #ddd;
 }
 
-.logo{
+.logo {
     position: absolute;
     height: 35px;
     left: 4px;
@@ -40,12 +40,15 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
+h1,
+h2 {
     text-align: center;
     color: royalblue;
 }
 
-.faq-item, .contact-form, .resources {
+.faq-item,
+.contact-form,
+.resources {
     margin-bottom: 20px;
 }
 
@@ -59,7 +62,8 @@ h1, h2 {
     color: #333;
 }
 
-.contact-form input, .contact-form textarea {
+.contact-form input,
+.contact-form textarea {
     width: 97%;
     padding: 10px;
     margin-top: 5px;
