--- a/assets/styles/configuracion.css
+++ b/assets/styles/configuracion.css
@@ -4,7 +4,8 @@ html {
     height: 100%;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    background-color: #f0f0f0; /* Color de fondo general */
+    background-color: #f0f0f0;
+    /* Color de fondo general */
 }
 
 .main {
@@ -28,7 +29,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:calc(100vh - 400px) ;
+    height: calc(100vh - 400px);
     padding: 20px;
     padding-top: 141px;
 }
@@ -96,7 +97,7 @@ a:hover {
     align-items: center;
 }
 
-.logo{
+.logo {
     position: absolute;
     height: 35px;
     left: 4px;
