--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -18,6 +18,9 @@ body {
     padding: 15px;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .navbar a {
