--- a/assets/styles/configuracion.css
+++ b/assets/styles/configuracion.css
@@ -27,7 +27,6 @@ a:hover {
     align-items: center;
     justify-content: center;
     height: calc(100vh - 400px);
-
 }
 
 .perfil,
@@ -83,10 +82,9 @@ a:hover {
 }
 
 .arriba {
-    position: relative;
     text-align: center;
     font-size: 1.5rem;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
     padding: .5rem;
     display: flex;
     justify-content: center;
@@ -101,6 +99,10 @@ a:hover {
     height: 35px;
     left: 4px;
     top: 4px;
+}
+
+.foto {
+    height: 50px;
 }
 
 /* Media queries para responsividad */
