--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -16,7 +16,7 @@ body {
     justify-content: space-around;
     align-items: center;
     padding: 15px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgb(255, 255, 255);
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
     position: fixed;
     bottom: 0;
@@ -44,7 +44,7 @@ body {
         bottom: 0;
         width: 100%;
         justify-content: space-around;
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgb(255, 255, 255);
         /* Un poco más opaca */
         box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
     }
