--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -19,11 +19,10 @@
 }
 
 .logo {
-    position: absolute;
+    position: fixed;
     height: 35px;
-    left: 4px;
-    top: 4px;
-
+    left: 8px;
+    top: 13px;
 }
 
 .content {
@@ -75,14 +74,19 @@
     text-decoration: underline;
 }
 
+/* Arriba | Derecha | Abajo | Izquierda */
 .horario_atencion {
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 15px;
+    margin: 20px auto 20px auto;
     background-color: rgba(255, 255, 255, 0.939);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    border-radius: 1px;
+    border-radius: 20px;
+    padding: 20px 15px;
+    max-width: 300px;
 }
 
 .horario_atencion h2 {
@@ -110,21 +114,32 @@
 }
 
 .chat {
-    /* background-color: rebeccapurple; */
-    height: 70px;
-    padding: 0 .75rem;
+    background-color: #f1f1f1;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    height: 80px;
+    padding: 0 1rem;
+    margin-bottom: 0.5rem;
     display: flex;
-    gap: .5rem;
+    gap: 1rem;
     align-items: center;
+    transition: background-color 0.3s ease;
+    max-width: 380px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+    width: calc(100% - 20px);
+}
+
+.chat:hover {
+    background-color: #eef;
+
 }
 
 .chat__img {
-    /* padding: .25rem; */
-    /* aspect-ratio: 1 / 1; */
-    height: 48.99px;
-    width: 48.99px;
+    height: 50px;
+    width: 50px;
     object-fit: cover;
-    border-radius: 999px;
+    border-radius: 50%;
 }
 
 .chat_container {
@@ -132,7 +147,11 @@
     flex: 1;
     flex-direction: column;
     justify-content: center;
-    gap: .1rem;
+    gap: 0.25rem;
+    padding: 8px 16px;
+    border: rgb(223, 223, 223) 2px solid;
+    border-radius: 40px;
+    background-color: white;
 }
 
 .chat_container div {
@@ -141,38 +160,48 @@
 }
 
 .chat_container_name {
-    font-size: large;
-    font-weight: 900;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #333;
 }
 
 .chat_container_mensagge {
-    color: rgb(34, 34, 34);
-    font-size: small;
-    height: 14.94px;
-}
-
-.chat_container div {
-    display: flex;
-    align-items: end;
+    color: #666;
+    font-size: 0.875rem;
+    height: auto;
 }
 
 .chat_container_date {
-
-    color: rgb(214, 214, 214);
-    font-size: small;
+    color: #aaa;
+    font-size: 0.75rem;
 }
 
 .kiosqueros_chats {
     text-align: center;
     font-size: 1.5rem;
-    background-color: rgb(255, 255, 255);
-    padding: .5rem;
+    background-color: #fff;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 1px solid #ddd;
+
+}
+
+.container_kiosqueros {
+    padding: 0 10px;
+    width: 100%;
+    max-width: 400px;
 }
 
 @media (max-width: 600px) {
+    .container_kiosqueros {
+
+        width: 100%;
+        padding: 0;
+
+    }
+
     .horario_atencion {
         padding: 15px;
     }
