--- a/assets/styles/noti.css
+++ b/assets/styles/noti.css
@@ -7,9 +7,12 @@
 .notificacion {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 15px;
-    margin-bottom: 10px;
+
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .notificacion h3 {
